--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "metaverse_modern_site_by_rohit",
-  "author": "Rohit Kumar Suman",
+  "name": "Enhance brands",
+  "author": "joel siby",
   "version": "0.1.0",
   "private": true,
   "scripts": {
